# gcrs

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  README  README.md  cargo-leptos.toml  flake.nix  package-lock.json  package.json  rust-analyzer.toml  ui_config.toml
docs/: 01_ssr_islands_infrastructure.md  TODO.md  md_content_research.md
docs/gitea/: 01_models_overview.md
gitcoda/: Cargo.toml  Trunk.toml
gitcoda/src/: app.rs  lib.rs  main.rs
gitcoda/src/components/ui/: drawer.rs  dropdown_menu.rs  marquee.rs  select.rs
gitcoda/src/models/: git.rs  ids.rs
gitcoda/src/pages/home/: lang_bar.rs  mod.rs  repo_overview.rs  repo_table.rs
gitcoda/src/services/: db.rs  mod.rs  repo.rs
gitcoda_web/: Cargo.toml
gitcoda_web/src/: app.rs  lib.rs  main.rs
gitcoda_web/src/components/custom/: mod.rs
gitcoda_web/src/components/custom/activity_feed/: commit.rs  issue.rs  pr.rs  repo.rs  types.rs
gitcoda_web/src/components/custom/heatmap/: injection.rs  mod.rs  script.rs  types.rs
gitcoda_web/src/components/layout/: header.rs
gitcoda_web/src/components/layout/header/: core.rs  mod.rs  repo_tab_strip.rs
gitcoda_web/src/components/ui/: drawer.rs  dropdown_menu.rs  hover_card.rs  mask.rs  mod.rs  select.rs
gitcoda_web/src/pages/: README
gitcoda_web/src/pages/home/: link_panel.rs  mod.rs  repo_overview.rs
gitcoda_web/src/pages/repo/: lang_bar.rs  mod.rs  repo_overview.rs
src/backend/: Cargo.toml
src/backend/src/: colors.rs  lib.rs
src/backend/src/data/: languages.json
src/backend/src/models/: mod.rs  user.rs
src/backend/src/models/git/: mod.rs  tests.rs
src/backend/src/services/: git.rs  mod.rs  repo.rs  user.rs
src/components/: Cargo.toml
src/components/src/: lib.rs  mod.rs
src/components/src/custom/: mod.rs
src/components/src/custom/activity_feed/: commit.rs  issue.rs  mod.rs  pr.rs  repo.rs  shared.rs
src/components/src/layout/header/: core.rs  mod.rs  repo_tab_strip.rs
src/components/src/ui/: button.rs  collapsible.rs  drawer.rs  dropdown_menu.rs  hover_card.rs  marquee.rs  select.rs
src/frontend/: Cargo.toml  index.html
src/frontend/src/: app.rs  lib.rs  main.rs
src/frontend/src/pages/: mod.rs
src/frontend/src/pages/auth/: cool_effect.rs  mod.rs  server_fns.rs
src/frontend/src/pages/auth/login/: mod.rs
src/frontend/src/pages/auth/signup/: mod.rs
src/frontend/src/pages/home/: mod.rs
src/frontend/src/pages/repo/: mod.rs  repo_table.rs
src/islands/: Cargo.toml
src/islands/src/: lang_bar.rs  lib.rs  link_panel.rs  repo_overview.rs
src/islands/src/heatmap/: script.rs
static/js/: lock_scroll.js  vaul_drawer.js
