[workspace]
members = ["gitcoda"]
resolver = "2"

[[workspace.metadata.leptos]]
name               = "gitcoda"
output-name        = "gitcoda"
bin-package        = "gitcoda"
lib-package        = "gitcoda"
site-root          = "target/site"
site-pkg-dir       = "pkg"
tailwind-input-file = "static/css/tailwind.css"
assets-dir         = "static"
site-addr          = "127.0.0.1:3000"
reload-port        = 3001
browserquery       = "defaults"
env                = "DEV"
bin-features       = ["ssr"]
bin-default-features = false
lib-features       = ["hydrate"]
lib-default-features = false

[profile.dev]
opt-level = 1
codegen-units = 1

[profile.release]
opt-level = "z"
lto = true
strip = true
codegen-units = 1
