[workspace]
members = ["gitcoda_web", "gitcoda"]
resolver = "2"

[[workspace.metadata.leptos]]
name               = "gitcoda"
output-name        = "gitcoda"
bin-package        = "gitcoda_web"
lib-package        = "gitcoda_web"
site-root          = "target/site"
site-pkg-dir       = "pkg"
tailwind-input-file = "static/css/tailwind.css"
assets-dir         = "static"
site-addr          = "127.0.0.1:3000"
reload-port        = 3001
browserquery       = "defaults"
env                = "DEV"
bin-features       = ["ssr"]
bin-default-features = false
lib-features       = ["hydrate"]
lib-default-features = false

[profile.dev]
opt-level = 0
codegen-units = 256
incremental = true
debug = 0
split-debuginfo = "off"
debug-assertions = false

[profile.dev.package."*"]
opt-level = 3

[profile.release]
opt-level = "z"
lto = true
strip = true
codegen-units = 1
