[package]
name = "gitcoda"
version = "0.1.0"
edition = "2024"

[lib]
crate-type = ["rlib"]

[features]
# Enable branch/tag pattern matching helpers (`ProtectedBranch::matches`, etc).
# Kept optional so the domain crate stays light and wasm-friendly by default.
pattern = ["dep:globset"]
# SSR deps (shaku DI, sqlx for DB)
ssr = ["dep:shaku", "dep:sqlx"]

[dependencies]
serde = { version = "1", features = ["derive"] }
chrono = { version = "0.4", features = ["serde"] }
globset = { version = "0.4", optional = true }
shaku = { version = "0.6", optional = true }
sqlx = { version = "0.7", features = ["runtime-tokio-rustls", "sqlite"], optional = true }

[dev-dependencies]
serde_json = "1"
