[package]
name = "gitcoda_web"
version = "0.1.0"
edition = "2024"

[lib]
crate-type = ["cdylib", "rlib"]

[features]
default = []
hydrate = [
    "leptos/hydrate",
]
ssr = [
    "leptos/ssr",
    "leptos_router/ssr",
    "dep:leptos_axum",
    "dep:axum",
    "dep:tokio",
    "dep:tower",
    "dep:tower-http",
    "dep:shaku",
    "dep:sqlx",
    "gitcoda/ssr",
]

[dependencies]
gitcoda       = { path = "../gitcoda" }
# Core — no rendering feature here; set per build via features above
leptos        = { version = "0.8.17", features = ["nightly", "islands"] }
leptos_router = { version = "0.8.13" }
leptos_meta   = "0.8"
leptos_ui     = "0.3.22"
leptos_icons  = "0.7.0"
icondata      = "0.7.0"

# SSR-only
leptos_axum = { version = "0.8",  optional = true }
axum        = { version = "0.8",  optional = true }
tokio       = { version = "1",    features = ["full"], optional = true }
tower       = { version = "0.5",  optional = true }
tower-http  = { version = "0.6",  features = ["fs", "compression-gzip"], optional = true }
shaku       = { version = "0.6",  optional = true }
sqlx        = { version = "0.7",  features = ["runtime-tokio-rustls", "sqlite"], optional = true }

# Shared utilities
serde       = { version = "1",    features = ["derive"] }
serde_json  = "1"
chrono      = { version = "0.4",  features = ["serde"] }
tw_merge    = { version = "0.1.21", features = ["variant"] }
strum       = { version = "0.26", features = ["derive"] }
strum_macros = "0.26"
toml        = "0.8"
log         = "0.4"

# Client-only (wasm32 target)
[target.'cfg(target_arch = "wasm32")'.dependencies]
console_error_panic_hook = "0.1.7"
console_log              = "1.0"
gloo-net                 = "0.6"
js-sys                   = "0.3"
wasm-bindgen             = "0.2"
web-sys = { version = "0.3", features = [
    "Window", "Document", "Element",
    "HtmlElement", "HtmlScriptElement", "Node",
] }
