[package]
name = "gitcoda"
version = "0.1.0"
edition = "2024"

[lib]
crate-type = ["rlib"]

[features]
# Enable branch/tag pattern matching helpers (`ProtectedBranch::matches`, etc).
# Kept optional so the domain crate stays light and wasm-friendly by default.
pattern = ["dep:globset"]
# SSR deps (shaku DI, sqlx for DB, argon2 for passwords)
ssr = ["dep:shaku", "dep:sqlx", "dep:argon2", "dep:rand"]

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
chrono = { version = "0.4", features = ["serde"] }
lazy_static = "1.4"
uuid = { version = "1", features = ["v4", "serde"] }
globset = { version = "0.4", optional = true }
shaku = { version = "0.6", optional = true }
sqlx = { version = "0.8", features = ["runtime-tokio-rustls", "sqlite"], optional = true }
argon2 = { version = "0.5", optional = true }
rand = { version = "0.8", optional = true }

[dev-dependencies]
serde_json = "1"
