[package]
name = "gitcoda-web"
version = "0.1.0"
edition = "2024"

[lib]
crate-type = ["cdylib", "rlib"]

[features]
default = []
hydrate = [
    "leptos/hydrate",
]
ssr = [
    "leptos/ssr",
    "leptos_router/ssr",
    "dep:leptos_axum",
    "dep:axum",
    "dep:tokio",
    "dep:tower",
    "dep:tower-http",
    "dep:shaku",
    "dep:sqlx",
    "dep:axum-extra",
    "dep:http",
    "dep:env_logger",
    "gitcoda/ssr",
    "islands/ssr",
]

[dependencies]
gitcoda       = { path = "../backend" }
components    = { path = "../components" }
islands       = { path = "../islands" }
# Core — no rendering feature here; set per build via features above
leptos        = { version = "0.8.17", features = ["nightly", "islands"] }
leptos_router = { version = "0.8.13" }
leptos_meta   = "0.8"
leptos_ui     = "0.3.22"
leptos_icons  = "0.7.0"
icondata      = "0.7.0"

# SSR-only
leptos_axum = { version = "0.8",  optional = true }
axum        = { version = "0.8",  optional = true }
axum-extra  = { version = "0.10", features = ["cookie", "cookie-private"], optional = true }
tokio       = { version = "1",    features = ["macros", "net", "rt", "rt-multi-thread"], optional = true }
tower       = { version = "0.5",  optional = true }
tower-http  = { version = "0.6",  features = ["fs"], optional = true }
shaku       = { version = "0.6",  optional = true }
sqlx        = { version = "0.8",  features = ["runtime-tokio-rustls", "sqlite"], optional = true }
http        = { version = "1",    optional = true }
env_logger  = { version = "0.11", optional = true }

# Shared utilities
serde       = { version = "1",    features = ["derive"] }
chrono      = { version = "0.4",  features = ["serde"] }
tw_merge    = { version = "0.1.21", features = ["variant"] }
strum       = { version = "0.26", features = ["derive"] }
strum_macros = "0.26"
toml        = "0.8"
log         = "0.4"

# Client-only (wasm32 target)
[target.'cfg(target_arch = "wasm32")'.dependencies]
console_error_panic_hook = "0.1.7"
console_log              = "1.0"
gloo-net                 = "0.6"
js-sys                   = "0.3"
wasm-bindgen             = "0.2"
